--- a/pages/customer/ngojo.html
+++ b/pages/customer/ngojo.html
@@ -8,40 +8,10 @@
 </head>
 
 <body>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus laudantium rem maiores atque ipsum, cum
-    obcaecati nesciunt! Nihil at nam natus ipsum ullam libero saepe, architecto inventore, minima, qui deserunt
-    voluptatem ab sequi illum quod ea dolores est obcaecati? Laborum rerum repudiandae cupiditate non, repellendus culpa
-    aliquam, maiores ex optio veniam, possimus dolorum. Sed sint veniam atque repudiandae nobis aperiam facere eum eos.
-    Cumque odio dolorem quibusdam, similique, asperiores incidunt optio non magnam quisquam est ullam autem deserunt
-    mollitia minus repudiandae magni? Tempore numquam sequi enim quod rem expedita aliquid debitis non perferendis
-    repellat excepturi eius consequatur delectus qui alias minima cum nemo harum necessitatibus, ut asperiores iusto
-    magnam eveniet dolore! Quam quod provident ad? Voluptatibus, iure, voluptates amet omnis architecto nam veritatis
-    enim tempora dolor ab modi necessitatibus, sint quod corporis eveniet soluta veniam. Modi temporibus deleniti
-    officiis obcaecati ipsum possimus perspiciatis fugit ut enim nobis. Quibusdam ab saepe dolor, dignissimos molestiae
-    totam necessitatibus exercitationem quisquam corrupti commodi adipisci suscipit vel laborum veniam aut architecto
-    ducimus, praesentium autem molestias maiores repudiandae inventore temporibus. Quas, ipsam a obcaecati deserunt
-    laboriosam, tempora voluptate quo repellat unde omnis quod cum, maxime iure fuga autem similique aut exercitationem
-    aliquid sunt quisquam officiis eaque? Aliquam autem sequi asperiores assumenda culpa ipsum, perferendis tempora
-    illum odio repellat nihil eum. Praesentium explicabo quisquam adipisci amet animi consequatur molestiae!
-    Consequuntur dolor incidunt rerum quisquam. Nostrum, reprehenderit ex excepturi pariatur omnis officiis. Non,
-    dignissimos debitis! Ipsum cupiditate nisi, soluta, repellendus similique adipisci illum rerum tempore commodi hic
-    eos fuga in at ut dicta maiores molestiae nihil autem culpa cum, consectetur officiis! Pariatur provident aliquid
-    quam rerum asperiores reprehenderit cum architecto eveniet autem, optio rem quas qui sit ratione earum at doloremque
-    eos distinctio quia doloribus ad alias voluptatibus. Odit a officia hic! Necessitatibus, dolore inventore! Ut,
-    recusandae excepturi. Voluptates eum, itaque non explicabo iste distinctio. Id, aperiam exercitationem sed, atque
-    sint soluta accusamus minima quaerat ipsum perferendis voluptatibus eum voluptatum quae, ullam ducimus illo nesciunt
-    iusto fugiat ipsam esse deserunt veritatis dolorem! Debitis tempora dignissimos dolore dolorum ea possimus ducimus
-    saepe vitae, facilis blanditiis voluptatum ullam obcaecati dolores maxime assumenda earum optio quasi odit ad
-    expedita, accusamus suscipit. Magnam impedit mollitia animi dicta ratione hic ipsum distinctio nostrum omnis sit, in
-    vel, quidem porro eius non commodi provident unde eaque et quas atque voluptatem! Assumenda nemo alias ipsam id enim
-    esse itaque quia vitae eveniet recusandae asperiores incidunt reiciendis officia libero consequuntur cumque quis
-    minima, repellat vel velit ab maxime. Quo, temporibus repudiandae. Culpa velit amet facere sunt nostrum officia qui
-    quibusdam cupiditate. Optio inventore iure voluptatum voluptas corrupti alias debitis, tempora quidem velit
-    distinctio exercitationem nostrum perferendis dolore voluptatibus eveniet. Vero expedita mollitia beatae dolores
-    neque et tempore fugit sapiente libero facilis consectetur voluptatum, soluta delectus eos quam iure modi? Saepe
-    aperiam deleniti corporis ex officia vero reprehenderit eos quasi recusandae et facere, doloribus quaerat odit,
-    suscipit quae at numquam? Animi numquam doloribus sed, optio quis quam ipsum voluptatum adipisci perspiciatis.
-    Voluptas odit rerum ducimus reiciendis architecto?
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem vitae iste cum ipsum aliquid. Mollitia
+    cupiditate, hic adipisci dignissimos earum officia accusamus, quas, modi sit eius est explicabo ut expedita eos? Qui
+    possimus cumque nulla, consectetur repellat eum dolorum vitae odit fuga, fugiat, enim asperiores autem delectus
+    sapiente quos officiis?
 </body>
 
 </html>
